<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/linear_layout_rounded"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvActivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/please_enter_activation_code_here"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/enter_code"
        android:inputType="textMultiLine|text" />


    <Button
        android:id="@+id/btnActivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="@dimen/dimen_50dp"
        android:paddingRight="@dimen/dimen_50dp"
        android:background="@drawable/rounded_bg_blue"
        android:layout_marginBottom="8dp"
        android:text="@string/activate" />

</LinearLayout>