<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:gravity="center"
        android:text="@string/vca"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="67sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha=".6"
        android:gravity="center"
        android:text="@string/video_conferencing_system"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".7"
                android:background="@drawable/et_rounded"
                android:hint="@string/user_id"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".7"
                android:background="@drawable/et_rounded"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dimen_10dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/device_login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
</layout>
