<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/dimen_40dp"
                        android:layout_height="@dimen/dimen_40dp"
                        android:background="@drawable/placeholder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".85"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="#707070" />

            <TextView
                android:id="@+id/txt_all_rooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="@dimen/dimen_10dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:text="@string/all_room" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@color/black_light"
                android:visibility="gone"
                android:alpha=".5"/>


            <EditText
                android:id="@+id/etChannelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:digits="@string/legal_channel_name_characters"
                android:gravity="start|center_vertical"
                android:hint="@string/label_channel_name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/encryption_key"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="20"
                    android:digits="@string/legal_channel_name_characters"
                    android:gravity="start|center_vertical"
                    android:hint="@string/label_encryption_key_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/encryption_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_do_network_test"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                android:onClick="onClickDoNetworkTest"
                android:text="@string/label_do_network_test"
                android:textAllCaps="false"
                android:textColor="@color/agora_blue"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/agora_blue"
                android:enabled="false"
                android:text="@string/connect"
                android:textColor="@android:color/white"
                android:visibility="gone" />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llTop"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_device_layout" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            <ImageView
                android:id="@+id/mic_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="45dp"
                android:layout_marginRight="16dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:background="@drawable/ic_mic_black_off"
                app:elevation="4dp" />

        </RelativeLayout>




    </LinearLayout>


</ScrollView>
