<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/ll_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/vca"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="67sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/video_conferencing_system"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dimen_50dp"
                android:layout_marginRight="@dimen/dimen_50dp"
                android:gravity="center|bottom"
                android:orientation="vertical">




                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dip"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center|bottom"-->
                <!--android:orientation="vertical">-->

                <ImageView
                    android:id="@+id/img_bounce"
                    android:layout_width="280dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="120dp"
                    android:background="@drawable/logo_pasport" />


                <Button
                    android:id="@+id/btn_get_started"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/dimen_50dp"
                    android:background="@drawable/btn_rounded"
                    android:paddingLeft="@dimen/dimen_200dp"
                    android:paddingRight="@dimen/dimen_200dp"
                    android:text="@string/get_started"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <!--</LinearLayout>-->


            </LinearLayout>

        <!--</ScrollView>-->
        `

    </LinearLayout>


    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <!--<LinearLayout-->
    <!--android:id="@+id/container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/splash"-->
    <!--android:orientation="vertical"-->
    <!--tools:context=".ui.SplashActivity">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginTop="@dimen/dimen_50dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/vca"-->
    <!--android:textAllCaps="true"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="67sp"-->
    <!--android:textStyle="bold" />-->


    <!--<TextView-->
    <!--android:id="@+id/tv_app_description"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/video_conferencing_system"-->
    <!--android:textAllCaps="true"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="18sp" />-->


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dip"-->
    <!--android:layout_marginLeft="@dimen/dimen_30dp"-->
    <!--android:layout_marginRight="@dimen/dimen_30dp"-->
    <!--android:layout_marginBottom="@dimen/dimen_50dp"-->
    <!--android:layout_weight="1"-->
    <!--android:visibility="gone"-->
    <!--android:gravity="center|bottom"-->
    <!--android:orientation="vertical">-->

    <!--<ImageView-->
    <!--android:id="@+id/img_bounce"-->
    <!--android:layout_width="240dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:layout_marginBottom="250dp"-->
    <!--android:background="@drawable/logo_pasport" />-->


    <!--<Button-->
    <!--android:id="@+id/btn_get_started"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@drawable/btn_rounded"-->
    <!--android:text="@string/get_started"-->
    <!--android:textAllCaps="false"-->
    <!--android:textColor="@color/white" />-->

    <!--</LinearLayout>-->


    <!--</LinearLayout>-->

    <!--</ScrollView>-->
</layout>

